# MAKaminski

./: AGENTS.md  README.md
.github/: mcp-instructions.md
.github/workflows/: cursor-usage.yml  refresh-stats.yml
cursor-usage/: Cargo.toml
cursor-usage/src/: main.rs
data/: README.md  cursor_usage.db  cursor_usage_latest.json  schema.sql
feature/: index.html  website-view-tracker-snippet.js
github/workflows/: codecov.yml
scripts/: fetch_cursor_usage.py  refresh_profile_stats.sh
tests/: test_fetch_cursor_usage.py
