[package]
name = "cursor-usage"
version = "0.1.0"
edition = "2021"
description = "Fetches Cursor team usage from the Analytics API and appends snapshots to SQLite for the profile badge"
license = "MIT"
publish = false

[[bin]]
name = "cursor-usage"
path = "src/main.rs"

[dependencies]
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
